--- a/src/WebUI/libs/blog/feature/src/lib/blog-post/blog-post.component.html
+++ b/src/WebUI/libs/blog/feature/src/lib/blog-post/blog-post.component.html
@@ -7,7 +7,7 @@
           <div>
             <div class="flex space-x-3">
               <div class="flex-shrink-0">
-                <img class="h-10 w-10 rounded-full" [src]="post.authorPhotoUrl" alt="" />
+                <img class="h-10 w-10 rounded-full" [ngSrc]="post.authorPhotoUrl" alt="" fill/>
                 <!--                <img class="h-10 w-10 rounded-full" [src]="post.authorPhotoUrl" alt="" />-->
               </div>
               <div class="min-w-0 flex-1">
@@ -194,7 +194,7 @@
                   class="inline-flex space-x-2 text-gray-400 hover:text-gray-500 dark:text-gray-300 dark:hover:text-gray-200"
                 >
                   <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                    <path d="M10 12.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z" />
+                    <path d="M10 12.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"/>
                     <path
                       fill-rule="evenodd"
                       d="M.664 10.59a1.651 1.651 0 010-1.186A10.004 10.004 0 0110 3c4.257 0 7.893 2.66 9.336 6.41.147.381.146.804 0 1.186A10.004 10.004 0 0110 17c-4.257 0-7.893-2.66-9.336-6.41zM14 10a4 4 0 11-8 0 4 4 0 018 0z"
